--- a/tasks.json
+++ b/tasks.json
@@ -10,7 +10,8 @@
 	{"name": "POI 5:30", "ert": 330},
 	{"name": "POI No Correct.", "ert": 180},
 	{"name": "POI Address", "ert": 700},
-	{"name": "POI Hours", "ert": 180}
+	{"name": "POI Hours", "ert": 180},
+	{"name": "POI Cat. Acc.", "ert": 160}
 ]
 
 
