--- a/tasks.json
+++ b/tasks.json
@@ -13,7 +13,8 @@
 	{"name": "POI Hours", "ert": 180},
 	{"name": "POI Cat. Acc.", "ert": 160},
 	{"name": "Query Intent & Token Tagging", "ert": 220},
-	{"name": "News Disambiguations", "ert": 60}
+	{"name": "News Disambiguations", "ert": 60},
+	{"name": "Search SBS", "ert": 160}
 ]
 
 
