--- a/tasks.json
+++ b/tasks.json
@@ -14,7 +14,8 @@
 	{"name": "POI Cat. Acc.", "ert": 160},
 	{"name": "Query Intent & Token Tagging", "ert": 220},
 	{"name": "News Disambiguations", "ert": 60},
-	{"name": "Search SBS", "ert": 160}
+	{"name": "Search SBS", "ert": 160},
+	{"name": "Chain Business", "ert": 60}
 ]
 
 
