--- a/tasks.json
+++ b/tasks.json
@@ -15,7 +15,9 @@
 	{"name": "Query Intent & Token Tagging", "ert": 220},
 	{"name": "News Disambiguations", "ert": 60},
 	{"name": "Search SBS", "ert": 160},
-	{"name": "Chain Business", "ert": 60}
+	{"name": "Chain Business", "ert": 60},
+	{"name": "POI Entry Point", "ert": 135}
+
 ]
 
 
