--- a/tasks.json
+++ b/tasks.json
@@ -16,8 +16,7 @@
 	{"name": "News Disambiguations", "ert": 60},
 	{"name": "Search SBS", "ert": 160},
 	{"name": "Chain Business", "ert": 60},
-	{"name": "POI Entry Point Base", "ert": 120},
-	{"name": "POI Entry Point #", "ert": 15}
+	{"name": "POI Entry Points", "ert": 15}
 
 ]
 
