--- a/tasks.json
+++ b/tasks.json
@@ -5,7 +5,7 @@
 	{"name": "Search Rel.", "ert": 90},
 	{"name": "Autocomplete", "ert": 240},
 	{"name": "Autocomplete Rel.", "ert": 120},
-	{"name": "POI 6:15", "ert": 375},
+	{"name": "POI Valid", "ert": 315},
 	{"name": "POI 2:00", "ert": 120},
 	{"name": "POI 5:30", "ert": 330},
 	{"name": "POI No Correct.", "ert": 180},
