--- a/tasks.json
+++ b/tasks.json
@@ -13,11 +13,12 @@
 	{"name": "POI Hours", "ert": 150},
 	{"name": "POI Cat. Acc.", "ert": 160},
 	{"name": "Query Intent & Token Tagging", "ert": 220},
-	{"name": "News Disambiguations", "ert": 60},
 	{"name": "Search SBS", "ert": 160},
 	{"name": "Chain Business", "ert": 60},
 	{"name": "POI Entry Points", "ert": 15},
 	{"name": "1:40", "ert": 100},
+	{"name": "News Topics", "ert": 30}
+	
 
 ]
 
